tests/NormalTests/paczka1/small_fuzzy/41517264.err
Error in line 5: XiC0tqrMHb A375 34,4
Error in line 7: 2JZSgHq3 A252 51,8
Error in line 12: mc7nwNs23J S31 86,7
Error in line 13: mc7nwNs23J A375 32,8
